# FinBot-Pro

./: .gitignore  README.md  description.txt  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_ui.py
agent/: workflow.py
agentic_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: config.yaml
data_ingestion/: ingestion_pipeline.py
data_models/: models.py
exception/: exceptions.py
notebook/: experiments.ipynb
prompt_library/: prompt.py
toolkit/: tools.py
utils/: config_loader.py  model_loaders.py  tool_analytics.py
