[project]
name = "agentic-trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "lancedb>=0.24.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langgraph>=0.4.8",
    "polygon>=1.2.6",
    "setuptools>=80.9.0",
    "tavily-python>=0.7.8",
]
